# drmyn-studio

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .zenodo.json  AGENTS.md  AI_USE_DISCLOSURE.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  LICENSE  Makefile  PROJECT_STATE.md  PUBLIC_SANITIZATION_CHECKLIST.md  PUBLIC_SNAPSHOT_MANIFEST.md  README.md  RELEASE_NOTES_v0.17.0.md  closingpriceclaudecodeanalysisforcode.md  codemeta.json  devcontainer.json  drmynstdklingomnideep-research-report.md  generate_workflow_diagram.py  pr_body.md  pyproject.toml  requirements.txt  revised_character_batch_to_golden_scene_plan.md
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
deliverables/: README.md
docs/: character_visual_priority_roadmap.md
evidence/: approval_log.csv  production_status.csv  prompt_asset_map.csv  run_costs.csv  scene_clip_map.csv  scene_prompt_map.csv
planning/: Plan-Revise.md  aesthetic_bible.yaml
post/: README.md
prompts/: prompt_changelog.md  prompt_library.yaml
schemas/: aesthetic_bible.schema.json  agent_handoff.schema.json  asset_clearance.schema.json  batch_job.schema.json  canonical_asset_intake_instruction.schema.json  canonical_asset_intake_scaffold.schema.json  canonical_asset_intake_slot.schema.json  canonical_asset_work_order.schema.json  character_identity_anchor.schema.json  character_look_sheet.schema.json  character_look_variant.schema.json  character_reference_chain.schema.json  character_sheet.schema.json  clean_start_audit.schema.json  (+50 more)
(+1822 files in other folders)
