[project]
name = "drmyn-studio"
version = "0.1.4"
description = "DRMYN Studio: metadata-only human-agent film production workflow"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21.0",
    "PyYAML>=6.0.1",
    "yamllint>=1.35.0",
    "pandas>=2.2.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]
ui = [
    "streamlit>=1.30",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
